# openapi/talentShukanShutsuenJoho.yaml
@@ -7,10 +7,10 @@ servers:
   - url: https://localhost:8080
     description: タレント週間出演情報検索
 paths:
-  /TalentShukanShutsuenJoho:
+  /talentShukanShutsuenJoho:
     get:
       tags:
-        - TalentShukanShutsuenJoho
+        - talentShukanShutsuenJoho
       operationId: getTalentShukanShutsuenJoho
       summary: タレントにおいての１週間ごとの情報を返す
       description: タレントにおいての１週間ごとの情報を返す
